# pluck-hair_test

./: .gitignore  CLAUDE.md  README.md
backend/: Dockerfile.base  docker-compose.base.yml  docker-compose.runtime.yml  docker-compose.yml  main.py  pyproject.toml
backend/config/: epson_io.yaml  nova5_to_epson_grid.yaml  plc_points.yaml  settings.dev.yaml  settings.live.seg_stable53.yaml  settings.live.yaml  settings.seg.yaml  settings.test.yaml  settings.yaml  workflow.seg.yaml  workflow.seg_stable53.yaml  workflow.test.yaml  workflow.yaml
backend/config/calibration/: arm_layout.example.yaml  camera_intrinsic.example.yaml  camera_intrinsic.yaml  extrinsic.example.yaml  extrinsic.yaml  eye_in_hand.example.yaml
backend/models/: .gitkeep
backend/scripts/: calibrate_extrinsic.sh  list_cameras.py  setup_calibration_env.sh  setup_camera.py
backend/src/: __init__.py  config.py  entrypoints.py  fresh_frame_daheng.py  pose_sources.py  types.py
backend/src/api/: __init__.py  app.py  dependencies.py  websocket_manager.py
backend/src/api/routes/: control_panel.py  detections.py  events.py  health.py  images.py  jsonrpc.py  video.py
backend/src/comm/: __init__.py  epson_io_controller.py  inproc_bus.py  plc_modbus.py  redis_adapter.py  redis_control_client.py
backend/src/core/: __init__.py  arm_grid_mapper.py  coordinate_transform.py  focus_stack.py  instance_segmenter.py  pick_orientation.py  pick_point_estimator.py  target_converter.py  tweezer_detector.py
backend/src/events/: frame_stream.py  redis_streams.py
backend/src/scheduler/: __init__.py  storage_saver.py
backend/src/services/: __init__.py  detection_service.py
backend/src/steps/: __init__.py  abstain_near_metal.py  crop_single_square.py  yolo_seg.py
backend/src/storage/: __init__.py  interfaces.py  local_storage.py  minio_storage.py  models.py  postgres_db.py  sqlite_db.py
backend/src/tasks/: __init__.py  factory.py  frame_loop.py  stats.py
backend/src/tasks/communication/: __init__.py  task.py
backend/src/tasks/detection/: __init__.py  task.py
backend/src/tasks/pixel_to_world/: __init__.py  task.py
backend/src/tasks/plc_orchestrator/: __init__.py  points.py  protocol.py  task.py
backend/src/tasks/seg_pick/: __init__.py  task.py
backend/src/tasks/seg_pick_stabilized/: __init__.py  stabilizer.py  task.py
backend/src/tasks/stabilized_detection/: __init__.py  pick_process.py  stabilizer.py  task.py
backend/src/utils/: __init__.py  visualization.py
backend/src/workflow/: __init__.py  event_builder.py  frame_renderer.py  frame_streamer.py  nodes.py
backend/tests/: test_abstain_near_metal.py  test_arm_grid_mapper.py  test_comm_lazy_imports.py  test_communication_detect_once.py  test_config_env_substitution.py  test_coordinate_transform.py  test_crop_single_square_step.py  test_frame_loop_pause.py  test_jsonrpc_route.py  test_pick_orientation_demo.py  test_pick_orientation_runtime.py  test_pick_process_detect_once_flow.py  test_pick_u_calibration.py  test_plc_orchestrator_confirm_retry.py  test_seg_pick_stabilized.py  test_target_converter.py  test_tweezer_detector.py  test_verify_transform.py  test_yolo_seg_crop_offset.py
backend/tools/: __init__.py  analyze_dark_core.py  batch_annotate_tweezer.py  calibrate_extrinsic_viewer.py  calibrate_shape_thresholds.py  contour_refine_demo.py  focus_stack_probe.py  machine_result_snapshot.py  oneshot_capture_render.py  oneshot_pick.py  pick_offset_probe.py  pick_orientation_demo.py  segment_batch_demo.py  segment_image_demo.py
backend/tools/calibrate/: README.md  __init__.py  extrinsic.py  extrinsic_align.py  eye_in_hand.py  intrinsic_models.py  ros2_daheng_camera_node.py  ros2_intrinsic.example.yaml  ros2_intrinsic.py  ros2_intrinsic_calibrate.sh  ros_convert_intrinsic.py  verify.py  verify_transform.py
docs/: stabilizer-extraction-concern.md
train/object-detection/baseline/: .gitignore  README.md  main.py  pyproject.toml  server.txt
train/object-detection/baseline/dataset/: custom_dataset_20251114.yaml  custom_dataset_tiles640.yaml  pluck_subset150_tiles640.yaml
train/object-detection/baseline/orchestrator/: __init__.py
(+112 files in other folders)
